# runemaster

./: .gitignore  README.md  eslint.config.js  gresource.xml  io.github.johnfactotum.Runemaster.desktop  io.github.johnfactotum.Runemaster.gschema.xml  io.github.johnfactotum.Runemaster.json  io.github.johnfactotum.Runemaster.metainfo.xml  meson.build  package-lock.json  package.json  runemaster.js
data/: data.json  entities.json  process-data.js  process-unihan.js
